Complete DevOps pipeline with Docker, Kubernetes, and Jenkins

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,13 @@ spec:
     spec:
       containers:
       - name: booking-app
-        image: devops-assignment-2-app:latest
+        image: yuvakunaal/devops-assignment-2-app:latest  # ← Use Docker Hub image
         ports:
         - containerPort: 8000
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
